test/link/script-syntax-error.link
rom0
	"ROM0" org 1
	"NONE" optional

romx "1"
romx 1
	"ROM1"
